parser/tests/bad/sub03.st
% type of formal parameter cannot be a 'dynamic array'

var i := 4

procedure p(arr: array 1..i of int)
  % empty
end p
